Fix content jumping when initializing Flickity

--- a/src/sass/3-generic/generic.sass
+++ b/src/sass/3-generic/generic.sass
@@ -11,3 +11,10 @@ hr
   &.is-invisible
     background-color: transparent
     margin: 0
+
+.content-wrapper
+  display: grid
+  grid-template-columns: 1fr
+  gap: 6rem
+  +tablet
+    grid-template-columns: 1fr 10rem
