--- a/src/sass/3-generic/sidebar.sass
+++ b/src/sass/3-generic/sidebar.sass
@@ -1,3 +1,12 @@
+.content.is-sidebar
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6
+    color: $grey
+
 .link-shape
   position: relative
   display: block
